added min and max values to year,month and day

--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
           <div>
               <div class="form-group col-md-6">
             <label>Month</label><br>
-            <input class="form-control form-control-lg" type="text" id="month" placeholder="Month" required><br>
+            <input class="form-control form-control-lg" type="text" id="month" placeholder="Month" required min="0" max="12"><br>
               </div>
               <div class="form-group col-md-6">
             <label>Day</label><br>
-            <input class="form-control form-control-lg" type="text" id="day" placeholder="Day" required><br>
+            <input class="form-control form-control-lg" type="text" id="day" placeholder="Day" required min="0" max="31"><br>
               </div>
               <div class="form-group col-md-6">
             <label>Year</label><br>
-            <input class="form-control form-control-lg" type="text" id="year" placeholder="Year" required><br>
+            <input class="form-control form-control-lg" type="text" id="year" placeholder="Year" required min="0" max="3000"><br>
               </div>
         <label>Gender</label><br>
             <input type="radio" name="gender" id="gender" value="male" checked> Male<br>
@@ -72,14 +72,14 @@ else
 {
    alert("check again");
 }
-else if( dd< 1 || dd>31)
+else ( dd< 1 || dd>31)
 {
    alert("check again");
 }
 // {
 //   else
 // }
-{
+
   if (Math.round(result)==0 && gender==='male')
 {
 document.getElementById("show").innerHTML = ("Your akan name is "+ boyNames[0]);
@@ -108,10 +108,10 @@ document.getElementById("show").innerHTML = ("Your akan name is "+ boyNames[0]);
  {
    document.getElementById("show").innerHTML = ("Your akan name is "+ boyNames[6]);
  }
-   else (Math.round(result)==6 && gender==='male')
+   else  (Math.round(result)==6 && gender==='male')
   
 }  
-  if (Math.round(result)==0 && gender==='female')
+  if(Math.round(result)==0 && gender==='female')
  {
    document.getElementById("show").innerHTML =  ("Your akan name is "+ girlNames[0]);
  }
@@ -135,16 +135,16 @@ document.getElementById("show").innerHTML = ("Your akan name is "+ boyNames[0]);
  {
    document.getElementById("show").innerHTML =  ("Your akan name is "+ girlNames[5]);
  }
- else  (Math.round(result)==6 && gender==='female')
+ else if (Math.round(result)==6 && gender==='female')
  
  {
    document.getElementById("show").innerHTML = ("Your akan name is "+ girlNames[6]);
  }
 
-//  else
-//  {
-//   alert("Enter information ");
-//  }
+ else
+ {
+  alert("Enter information ");
+ }
 </script> 
 </body>
 </html>
