--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Akan Namer</title>
-  <link rel="stylesheet" type="text/css" href="css/bootstrap-grid.min.css">
-  <link rel="stylesheet" type="text/css" href="bootstrap-4.3.1-dist/css/bootstrap-grid.css">
+  <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
   <link rel="stylesheet" type="text/css" href="styles.css">
 
 </head>
@@ -15,7 +14,7 @@
     <div class="jumbotron">
     <h1><strong>Akan Namer</strong></h1>
     </div>
-      <form>
+      <form onsubmit="event.preventDefault()">
         
         <div class="jumbotron">
           <p style="font-weight:bold;text-align:center;">Your akan name?<br>
@@ -30,108 +29,14 @@
         <label>Gender</label><br>
             <input type="radio" name="gender" id="gender" value="male" checked> Male<br>
             <input type="radio" name="gender" value="female"> Female<br><br>
-            <input type="submit" value="Submit" onclick="submition()">
+            <input type="submit" value="Submit" onclick="get()">
          </form>
          <p id="show"></p>
         </div>
        </div>
        <p class="rights"><em>&copyCopyright 2019. All rights reserved.</em></p>
       
-  <script>
-  function submition(){
+  <script src="script.js"></script>
  
- var month=document.getElementById("month").value;
- var mm=parseInt(month);
- var day=document.getElementById("day").value;
- var dd=parseInt(day);
- var year=document.getElementById("year").value;
- var yy=parseInt(year);
- var cc=(yy-1)/100+1;
-
- var result=parseInt( ( (cc/4) -2*cc-1) + ((5*yy/4) ) + ((26*(mm+1)/10)) + dd) % 7 ;
- var boyNames=["Kwasi","Kwadwo","Dejong","Kwaku","Yaw","Kofi","Kwame"];
- var girlNames=["Akosua"," Adwoa","Abenaa","Akua","Yaa","Afua","Ama"];
- if (document.getElementById("gender").checked)
- {
-   var gender='male';
- }
- else
-{
-   var gender='female';
-}
-
-if (mm <1  || mm>12 || mm==2 && dd>29)
-{
-   alert("invalid");
-}
-else if( dd< 1 || dd>31)
-{
-   alert("invalid");
-}
- else if (Math.round(result)==0 && gender==='male')
-{
-document.getElementById("show").innerHTML = ("Your akan name is "+ boyNames[0]);
-}
-   else if (Math.round(result)==1 && gender==='male')
- {
-   document.getElementById("show").innerHTML =("Your akan name is "+ boyNames[1]);
- }
- else if (Math.round(result)==2 && gender==='male')
- {
-   document.getElementById("show").innerHTML =("Your akan name is " +boyNames[2]);
- }
- else if (Math.round(result)==3 && gender==='male' )
- {
-   document.getElementById("show").innerHTML =("Your akan name is "+ boyNames[3]);
- }
- else if (Math.round(result)==4 && gender==='male')
- {
-   document.getElementById("show").innerHTML = ("Your akan name is "+ boyNames[4]);
- }
- else if (Math.round(result)==5 && gender==='male')
- {
-   document.getElementById("show").innerHTML = ("Your akan name is "+ boyNames[5]);
- }
- else if (Math.round(result)==6 && gender==='male')
- {
-   document.getElementById("show").innerHTML = ("Your akan name is "+ boyNames[6]);
- }
-   else if (Math.round(result)==6 && gender==='male')
-  
-   
-  if (Math.round(result)==0 && gender==='female')
- {
-   document.getElementById("show").innerHTML =  ("Your akan name is "+ girlNames[0]);
- }
- else if (Math.round(result)==1 && gender==='female')
- {
-   document.getElementById("show").innerHTML = ("Your akan name is "+ girlNames[1]);
- }
- else if (Math.round(result)==2 && gender==='female')
- {
-   document.getElementById("show").innerHTML = ("Your akan name is "+ girlNames[2]);
- }
- else if (Math.round(result)==3 && gender==='female')
- {
-   document.getElementById("show").innerHTML =("Your akan name is "+ girlNames[3]);
- }
- else if (Math.round(result)==4 && gender==='female')
- {
-   document.getElementById("show").innerHTML = ("Your akan name is "+ girlNames[4]);
- }
- else if (Math.round(result)==5 && gender==='female')
- {
-   document.getElementById("show").innerHTML =  ("Your akan name is "+ girlNames[5]);
- }
- else if (Math.round(result)==6 && gender==='female')
- 
- {
-   document.getElementById("show").innerHTML = ("Your akan name is "+ girlNames[6]);
- }
- else
- {
-  alert("Enter information ");
- }
-</script> 
 </body>
 </html>
